Fix aside menu not opening when clicking picture on shopping list
The list switch dropdown was covering up the image, making it unclickable

--- a/public/views/css/panel.css
+++ b/public/views/css/panel.css
@@ -84,7 +84,7 @@
 	font-size: 7.1vw;
 	text-align: center;
 	margin: 0;
-	padding: 6.2125vw;
+	padding: 6.2125vw 0 6.2125vw 0;
 	font-weight: bold;
 }
 
